Use a spacer column to prevent label column from overlapping with first value column

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -148,6 +148,7 @@ table.actionsDataTable td.label {
 
 table.dataTable th.label {
   border-left: 0;
+  position: absolute;
 }
 
 .dataTableActions table.dataTable th.label {
